--- a/front/package.json
+++ b/front/package.json
@@ -20,7 +20,8 @@
     "jwt-decode": "^4.0.0",
     "quasar": "^2.8.0",
     "vue": "^3.4.18",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "vue3-recaptcha2": "^1.8.0"
   },
   "devDependencies": {
     "@quasar/app-vite": "^1.8.0",
