--- a/back/package.json
+++ b/back/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.0"
   }
